[package]
name = "minios"
version = "0.1.0"
authors = ["Daisuke Takahashi <d.takahashi1811@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"

# this profile used when `cargo build`.
[profile.dev]
panic = "abort" # disable all unwinding feature

# this profile used when `cargo build --release`.
[profile.release]
panic = "abort"